--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -169,7 +169,7 @@
               <img src="img/item_icons/1.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
-            <p class="price">310Р<span class="price-weight">/кг</span></p>
+            <p class="price">310₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -177,7 +177,7 @@
               <img src="img/item_icons/2.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </a>
-            <p class="price">380Р<span class="price-weight">/кг</span></p>
+            <p class="price">380₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -185,14 +185,14 @@
               <img src="img/item_icons/3.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </a>
-            <p class="price">355Р<span class="price-weight">/кг</span></p>
+            <p class="price">355₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           <li class="catalog-item">
             <a href="#">
               <img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </a>
-            <p class="price">415Р<span class="price-weight">/кг</span></p>
+            <p class="price">415₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -200,7 +200,7 @@
               <img src="img/item_icons/5.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с брусничным джемом</p>
             </a>
-            <p class="price">325Р<span class="price-weight">/кг</span></p>
+            <p class="price">325₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -208,7 +208,7 @@
               <img src="img/item_icons/6.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-черничное с цельными ягодами черники</p>
             </a>
-            <p class="price">410Р<span class="price-weight">/кг</span></p>
+            <p class="price">410₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -216,7 +216,7 @@
               <img src="img/item_icons/7.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-лимонное с карамельной присыпкой</p>
             </a>
-            <p class="price">375Р<span class="price-weight">/кг</span></p>
+            <p class="price">375₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -224,7 +224,7 @@
               <img src="img/item_icons/8.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с шоколадной стружкой</p>
             </a>
-            <p class="price">320Р<span class="price-weight">/кг</span></p>
+            <p class="price">320₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -232,7 +232,7 @@
               <img src="img/item_icons/9.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-ванильное с кусочками шоколада</p>
             </a>
-            <p class="price">440Р<span class="price-weight">/кг</span></p>
+            <p class="price">440₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -240,7 +240,7 @@
               <img src="img/item_icons/10.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с ментоловым сиропом</p>
             </a>
-            <p class="price">435Р<span class="price-weight">/кг</span></p>
+            <p class="price">435₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -248,7 +248,7 @@
               <img src="img/item_icons/11.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с кусочками черного шоколада</p>
             </a>
-            <p class="price">355Р<span class="price-weight">/кг</span></p>
+            <p class="price">355₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
@@ -256,7 +256,7 @@
               <img src="img/item_icons/12.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с мятным сиропом</p>
             </a>
-            <p class="price">420Р<span class="price-weight">/кг</span></p>
+            <p class="price">420₽<span class="price-weight">/кг</span></p>
             <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
         </ul>
