--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <img src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
-  					<p class="price">310Р<span class="price-weight">/кг</span></p>
+  					<p class="price">310₽<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -120,7 +120,7 @@
               <img src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
-  					<p class="price">380Р<span class="price-weight">/кг</span></p>
+  					<p class="price">380₽<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -128,7 +128,7 @@
               <img src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
-  					<p class="price">355Р<span class="price-weight">/кг</span></p>
+  					<p class="price">355₽<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -136,13 +136,13 @@
               <img src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
-  					<p class="price">415Р<span class="price-weight">/кг</span></p>
+  					<p class="price">415₽<span class="price-weight">/кг</span></p>
   				</li>
   			</ul>
   		</section>
 
   		<section class="about-us">
-  			<h2 class="about-us-title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+  			<h2 class="about-us-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
   			<ul class="about-us-elements">
   				<li class="description description-1">
   					Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
