--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -14,7 +14,7 @@
           <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина">
         </a>
         <ul class="site-navigation">
-          <li class="site-navigation-catalog">
+          <li class="site-navigation-menu">
             <a class="selected" href="#">Каталог</a>
             <ul class="menu">
               <li class="menu-title">
@@ -26,8 +26,8 @@
               <li><a href="#">Мелорин</a></li>
             </ul>
           </li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О Компании</a></li>
+          <li class="site-navigation-menu"><a href="#">Доставка и оплата</a></li>
+          <li class="site-navigation-menu"><a href="#">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
           <li class="search">
