--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   		<nav class="main-navigation">
   			<a><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
   			<ul class="site-navigation">
-  				<li class="site-navigation-catalog">
+  				<li class="site-navigation-menu">
   					<a href="#">Каталог</a>
   					<ul class="menu">
   						<li>
@@ -24,8 +24,8 @@
   						<li><a href="#">Мелорин</a></li>
   					</ul>
   				</li>
-  				<li><a href="#">Доставка и оплата</a></li>
-  				<li><a href="#">О Компании</a></li>
+  				<li class="site-navigation-menu"><a href="#">Доставка и оплата</a></li>
+  				<li class="site-navigation-menu"><a href="#">О Компании</a></li>
   			</ul>
   			<ul class="user-navigation">
           <li class="search">
@@ -85,6 +85,11 @@
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   			</ul>
+        <div class="slider-radio">
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <input type="radio" id="btn-2" name="toggle">
+          <input type="radio" id="btn-3" name="toggle">
+        </div>
   		</section>
 
   		<section class="stock">
