--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -16,11 +16,11 @@
         <ul class="site-navigation">
           <li class="site-navigation-menu">
             <a class="selected" href="#">Каталог</a>
-            <ul class="menu">
-              <li class="menu-title">
-                <a href="#">Новинки</a>
+            <ul class="submenu">
+              <li>
+                <a class="special" href="#">Новинки</a>
               </li>
-              <li class="selected"><a href="catalog_cream.html">Сливочное</a></li>
+              <li ><a class="selected" href="catalog_cream.html">Сливочное</a></li>
               <li><a href="#">Щербеты</a></li>
               <li><a href="#">Фруктовый лед</a></li>
               <li><a href="#">Мелорин</a></li>
@@ -58,19 +58,19 @@
             </form>
           </li>
           <li class="cart">
-            <a class="button cart-button" href="#"><img src="img/cart_filled.svg" alt="full cart icon">2 товара</a>
+            <a class="button cart-button cart-filled" href="#"><img src="img/cart_filled.svg" alt="full cart icon">2 товара</a>
 
             <div class="cart-list">
               <table>
                 <tr>
-                  <td><button class="item-remove" type="button">Закрыть</button></td>
+                  <td><button class="item-remove" type="button">Удалить</button></td>
                   <td><img src="img/item_icons/1.jpg" width="33" height="33" alt="Иконка товара"></td>
                   <td>Пломбир с апельсиновым джемом</td>
                   <td>1,5 кг х <span class="cart-price">200 руб.</span></td>
                  <td>300 руб.</td>
                </tr>
                 <tr>
-                 <td><button class="item-remove" type="button">Закрыть</button></td>
+                 <td><button class="item-remove" type="button">Удалить</button></td>
                   <td><img src="img/item_icons/3.jpg" width="33" height="33" alt="Иконка товара"></td>
                   <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                  <td>1,5 кг х <span class="cart-price">300 руб.</span></td>
@@ -170,7 +170,7 @@
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
             <p class="price">310₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -178,7 +178,7 @@
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </a>
             <p class="price">380₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -186,14 +186,14 @@
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </a>
             <p class="price">355₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           <li class="catalog-item">
             <a href="#">
               <img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </a>
             <p class="price">415₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -201,7 +201,7 @@
               <p>Сливочное с брусничным джемом</p>
             </a>
             <p class="price">325₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -209,7 +209,7 @@
               <p>Сливочно-черничное с цельными ягодами черники</p>
             </a>
             <p class="price">410₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -217,7 +217,7 @@
               <p>Сливочно-лимонное с карамельной присыпкой</p>
             </a>
             <p class="price">375₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -225,7 +225,7 @@
               <p>Сливочное с шоколадной стружкой</p>
             </a>
             <p class="price">320₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -233,7 +233,7 @@
               <p>Сливочно-ванильное с кусочками шоколада</p>
             </a>
             <p class="price">440₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -241,7 +241,7 @@
               <p>Сливочное с ментоловым сиропом</p>
             </a>
             <p class="price">435₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -249,7 +249,7 @@
               <p>Сливочное с кусочками черного шоколада</p>
             </a>
             <p class="price">355₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -257,7 +257,7 @@
               <p>Сливочное с мятным сиропом</p>
             </a>
             <p class="price">420₽<span class="price-weight">/кг</span></p>
-            <button class="item-card" type="button">Быстрый просмотр</button>
+            <button class="button" type="button">Быстрый просмотр</button>
           </li>
         </ul>
       </section>
