--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   			<ul class="site-navigation">
   				<li class="site-navigation-menu">
   					<a href="#">Каталог</a>
-  					<ul class="menu">
+  					<ul class="submenu">
   						<li>
-  							<a href="#">Новинки</a>
+  							<a class="special" href="#">Новинки</a>
   						</li>
   						<li><a href="catalog_cream.html">Сливочное</a></li>
   						<li><a href="#">Щербеты</a></li>
@@ -191,11 +191,11 @@
   			<div class="map-adress">
   				<p>
   					Адреса главного офиса и офлайн-магазина:<br>
-  					<span class="bold">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+  					<span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
   				</p>
   				<p>
   					Для заказов по телефону:<br>
-  					<span class="bold">8 812 450-25-25</span><br>
+  					<span>8 812 450-25-25</span><br>
   					(с 10 до 20 ежедневно)
   				</p>
   				<a class="button" href="#">Форма обратной связи</a>
